tree-sitter-hcl2/test/corpus/simple_resource.txt
================
Random variables
================

var.foo_bar

---

(configuration (var (ref)))

=================================
Random variables that is assinged
=================================

bar = var.foo_bar

---

(configuration (identifier (var (ref))))

========================
Resource with variables
========================

resource "aws_db_instance" "postgresql" {
  allocated_storage = var.allocated_storage
}

---

(configuration
 (resource
  (resource_type)
  (resource_name)
  (block
   (attribute (identifier) (var (ref))))))
