tree-sitter-hcl2/test/corpus/variables.txt
===
Simple string variable
===

variable "image_id" {
  type = string
}

variable "create" {
  type = bool
}

variable "how_many" {
  type = number
}

---

(configuration
  (variable (variable_name) (variable_block
    (type (string_ty))))

  (variable (variable_name) (variable_block
    (type (bool_ty))))

  (variable (variable_name) (variable_block
    (type (number_ty)))))

===
List, set, and map types
===

variable "foos" {
  type = list(string)
}

variable "bars" {
  type = set(string)
}

variable "maps" {
  type = map(number)
}

---

(configuration
  (variable (variable_name) (variable_block
    (type (list_ty (string_ty)))))

  (variable (variable_name) (variable_block
    (type (set_ty (string_ty)))))

  (variable (variable_name) (variable_block
    (type (map_ty (number_ty))))))
